tests/expected_failures/type_wrong_type.stderr
error: `#[gflags(type=...)]` expects a quoted string
  --> $DIR/type_wrong_type.rs:11:19
   |
11 |     #[gflags(type=1)]
   |                   ^
